
plugins {
	id 'org.springframework.boot' version '2.2.4.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
	id "org.beryx.jlink" version "2.17.2"
	id "org.javamodularity.moduleplugin" version "1.6.0"
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

mainClassName = 'com.example.testjlink.TestJlinkApplication'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

jar {
	enabled = true
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
}

jlink {
	options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
	launcher {
		name = 'hellofx'
		customImage {
			appModules = ['com.example.merged.module']
		}
		jvmArgs = [
				'--add-reads', 'com.example.merged.module=testjlink',
				'-cp', '../app/*'
		]
	}
	mergedModule {
			additive = true
			uses 'ch.qos.logback.classic.spi.Configurator'
			uses 'javax.validation.valueextraction.ValueExtractor'
			uses 'javax.validation.ConstraintValidator'
	}
	forceMerge 'jackson', 'log4j'
}
